userauth-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: userauthnp-srv
spec:
  type: NodePort
  selector:
    app: userauthenticationservice
  ports:
    - name: userauthenticationservice
      protocol: TCP
      port: 80
      targetPort: 80
